feat: update repo to use to chirpy theme

--- a/index.html
+++ b/index.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">"
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Frontend Mentor | Profile card component</title>
-</head>
-<body>
-    <div class="id-box">
-        <img src="https://res.cloudinary.com/danza00/image/upload/v1614693482/bg-pattern-card_vn96d1.svg" class="blue-balls">
-        <div class="portraitblock">
-        <img src="https://res.cloudinary.com/danza00/image/upload/v1614693482/image-victor_ndpmr7.jpg" class="portrait">
-        </div>
-        <div>
-            <h1><b>Victor Crest</b> 26</h1>
-            <h2>London</h2>
-        </div>
-        <hr>
-        <div class="flexcontainer">
-          <div class="stat"><b>80K</b></br>Followers</div>
-          <div class="stat"><b>803K</b></br>Likes</div>
-          <div class="stat"><b>1.4K</b></br>Photos</div>
-        </div>
-</body>
-</html>
+---
+layout: home
+# Index page
+---
